# lgio

./: Cargo.toml  README.md
src/: adapters.rs  error.rs  lib.rs  sync_impls.rs
src/adapters/: chain.rs  map_err.rs  std.rs  take.rs
